bug squashing

--- a/src/app/player-notes/player-notes.component.css
+++ b/src/app/player-notes/player-notes.component.css
@@ -9,6 +9,7 @@
 
 button {
     margin-top: 15px;
+    float: right
 }
 
 .noteOuterShell {
